// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatIntegrationCampaigns component should display the empty state correctly 1`] = `
<Connect(ChatIntegrationCampaigns)
  integration={
    Immutable.Map {
      id: 118,
      type: "smooch_inside",
      name: "My new chat",
      meta: Immutable.Map {
        campaigns: Immutable.List [
        ],
      },
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  updateCampaign={[Function]}
>
  <ChatIntegrationCampaigns
    integration={
      Immutable.Map {
        id: 118,
        type: "smooch_inside",
        name: "My new chat",
        meta: Immutable.Map {
          campaigns: Immutable.List [
          ],
        },
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    updateCampaign={[Function]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            tag="ol"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations"
              >
                Integrations
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside"
              >
                Chat
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              My new chat
            </BreadcrumbItem>
            <BreadcrumbItem
              active={true}
              tag="li"
            >
              Campaigns
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="d-flex align-items-center justify-content-between flex-wrap page-header"
        >
          <Breadcrumb
            tag="ol"
          >
            <ol
              className="breadcrumb"
            >
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Integrations
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations/smooch_inside"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Chat
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  My new chat
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                <li
                  className="active breadcrumb-item"
                >
                  Campaigns
                </li>
              </BreadcrumbItem>
            </ol>
          </Breadcrumb>
          <div>
            <Button
              color="success"
              tag={[Function]}
              to="/app/settings/integrations/smooch_inside/118/campaigns/new"
            >
              <Link
                className="btn btn-success"
                onClick={[Function]}
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/118/campaigns/new"
              >
                <a
                  className="btn btn-success"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Create campaign
                </a>
              </Link>
            </Button>
          </div>
        </div>
      </PageHeader>
      <RealtimeMessagingIntegrationNavigation
        integration={
          Immutable.Map {
            id: 118,
            type: "smooch_inside",
            name: "My new chat",
            meta: Immutable.Map {
              campaigns: Immutable.List [
              ],
            },
          }
        }
      >
        <SecondaryNavbar>
          <Navbar
            className="navbar"
            expand={false}
            tag="nav"
          >
            <nav
              className="navbar navbar"
            >
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/118/appearance"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Appearance
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/118/installation"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Installation
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/118/preferences"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Preferences
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/118/campaigns"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Campaigns
                </a>
              </Link>
            </nav>
          </Navbar>
        </SecondaryNavbar>
      </RealtimeMessagingIntegrationNavigation>
      <Container
        className="page-container"
        fluid={true}
        tag="div"
      >
        <div
          className="page-container container-fluid"
        >
          <p>
            Use campaigns to prompt visitors of your website to start chatting with your team.
          </p>
          <div>
            This integration doesn't have any campaigns yet.
          </div>
        </div>
      </Container>
    </div>
  </ChatIntegrationCampaigns>
</Connect(ChatIntegrationCampaigns)>
`;

exports[`ChatIntegrationCampaigns component should display the list correctly 1`] = `
<Connect(ChatIntegrationCampaigns)
  integration={
    Immutable.Map {
      id: 118,
      type: "smooch_inside",
      name: "My new chat",
      meta: Immutable.Map {
        campaigns: Immutable.List [
          Immutable.Map {
            id: "156a4d-fg68h40-sd6f4",
            name: "Super campaign",
            deactivated_datetime: null,
          },
          Immutable.Map {
            id: "not-so-good-campaign-d8f9-fds486-sf78",
            name: "Not so good campaign",
            deactivated_datetime: "2017-10-06T17:17:56.565Z",
          },
        ],
      },
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  updateCampaign={[Function]}
>
  <ChatIntegrationCampaigns
    integration={
      Immutable.Map {
        id: 118,
        type: "smooch_inside",
        name: "My new chat",
        meta: Immutable.Map {
          campaigns: Immutable.List [
            Immutable.Map {
              id: "156a4d-fg68h40-sd6f4",
              name: "Super campaign",
              deactivated_datetime: null,
            },
            Immutable.Map {
              id: "not-so-good-campaign-d8f9-fds486-sf78",
              name: "Not so good campaign",
              deactivated_datetime: "2017-10-06T17:17:56.565Z",
            },
          ],
        },
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    updateCampaign={[Function]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            tag="ol"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations"
              >
                Integrations
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside"
              >
                Chat
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              My new chat
            </BreadcrumbItem>
            <BreadcrumbItem
              active={true}
              tag="li"
            >
              Campaigns
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="d-flex align-items-center justify-content-between flex-wrap page-header"
        >
          <Breadcrumb
            tag="ol"
          >
            <ol
              className="breadcrumb"
            >
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Integrations
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations/smooch_inside"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Chat
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  My new chat
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                <li
                  className="active breadcrumb-item"
                >
                  Campaigns
                </li>
              </BreadcrumbItem>
            </ol>
          </Breadcrumb>
          <div>
            <Button
              color="success"
              tag={[Function]}
              to="/app/settings/integrations/smooch_inside/118/campaigns/new"
            >
              <Link
                className="btn btn-success"
                onClick={[Function]}
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/118/campaigns/new"
              >
                <a
                  className="btn btn-success"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Create campaign
                </a>
              </Link>
            </Button>
          </div>
        </div>
      </PageHeader>
      <RealtimeMessagingIntegrationNavigation
        integration={
          Immutable.Map {
            id: 118,
            type: "smooch_inside",
            name: "My new chat",
            meta: Immutable.Map {
              campaigns: Immutable.List [
                Immutable.Map {
                  id: "156a4d-fg68h40-sd6f4",
                  name: "Super campaign",
                  deactivated_datetime: null,
                },
                Immutable.Map {
                  id: "not-so-good-campaign-d8f9-fds486-sf78",
                  name: "Not so good campaign",
                  deactivated_datetime: "2017-10-06T17:17:56.565Z",
                },
              ],
            },
          }
        }
      >
        <SecondaryNavbar>
          <Navbar
            className="navbar"
            expand={false}
            tag="nav"
          >
            <nav
              className="navbar navbar"
            >
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/118/appearance"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Appearance
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/118/installation"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Installation
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/118/preferences"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Preferences
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/118/campaigns"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Campaigns
                </a>
              </Link>
            </nav>
          </Navbar>
        </SecondaryNavbar>
      </RealtimeMessagingIntegrationNavigation>
      <Container
        className="page-container"
        fluid={true}
        tag="div"
      >
        <div
          className="page-container container-fluid"
        >
          <p>
            Use campaigns to prompt visitors of your website to start chatting with your team.
          </p>
          <Table
            className="mt-3"
            hover={true}
            responsiveTag="div"
            tag="table"
          >
            <table
              className="mt-3 table table-hover"
            >
              <tbody>
                <tr>
                  <td
                    className="link-full-td"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations/smooch_inside/118/campaigns/156a4d-fg68h40-sd6f4"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        <div>
                          <b>
                            Super campaign
                          </b>
                        </div>
                      </a>
                    </Link>
                  </td>
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleButton
                      onChange={[Function]}
                      value={true}
                    >
                      <label
                        className="switch"
                        onClick={[Function]}
                      >
                        <input
                          checked={true}
                          readOnly={true}
                          type="checkbox"
                        />
                        <div
                          className="slider"
                        />
                      </label>
                    </ToggleButton>
                  </td>
                </tr>
                <tr>
                  <td
                    className="link-full-td"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations/smooch_inside/118/campaigns/not-so-good-campaign-d8f9-fds486-sf78"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        <div>
                          <b>
                            Not so good campaign
                          </b>
                        </div>
                      </a>
                    </Link>
                  </td>
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleButton
                      onChange={[Function]}
                      value={false}
                    >
                      <label
                        className="switch"
                        onClick={[Function]}
                      >
                        <input
                          checked={false}
                          readOnly={true}
                          type="checkbox"
                        />
                        <div
                          className="slider"
                        />
                      </label>
                    </ToggleButton>
                  </td>
                </tr>
              </tbody>
            </table>
          </Table>
        </div>
      </Container>
    </div>
  </ChatIntegrationCampaigns>
</Connect(ChatIntegrationCampaigns)>
`;
